# skills-library

./: .gitignore  README.md
skills/: README.md  manifest.json
skills/aqvision-aqcfg-converter/: SKILL.md
skills/aqvision-aqcfg-converter/agents/: openai.yaml
skills/aqvision-aqcfg-converter/references/: aqvision-aqcfg-to-aqproj.md
skills/codex-vscode-remote-fix/: SKILL.md
skills/codex-vscode-remote-fix/agents/: openai.yaml
skills/codex-vscode-remote-fix/scripts/: codex-ensure-vscode-wrapper.sh
skills/tracepro-oml-db-audit/: README.md  SKILL.md  pyproject.toml
skills/tracepro-oml-db-audit/docs/: migration-checklist.md
skills/tracepro-oml-db-audit/examples/: audit_oml.py
skills/tracepro-oml-db-audit/scripts/: probe.ps1
skills/tracepro-oml-db-audit/src/tracepro_oml_db_audit/: __init__.py  audit.py  cli.py
skills/zemax-zos-api/: README.md  SKILL.md  pyproject.toml  requirements.txt
skills/zemax-zos-api/docs/: migration-checklist.md
skills/zemax-zos-api/examples/: inspect_lens.py  minimal_connect.py
skills/zemax-zos-api/scripts/: probe.ps1
skills/zemax-zos-api/src/zemax_zos_api_skill/: __init__.py  cli.py  connection.py
