[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracepro-oml-db-audit"
version = "0.1.0"
description = "Audit TracePro OML attribute tokens and TracePro SQLite property databases without guessing internal codes."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
