[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zemax-zos-api-skill"
version = "0.1.0"
description = "Reusable helpers for connecting Python to Ansys Zemax OpticStudio ZOS-API."
requires-python = ">=3.10"
dependencies = [
  "pythonnet>=3.0.3,<4",
]

[tool.setuptools.packages.find]
where = ["src"]
